commit all project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #logging.level.root = OFF
 
+url = http://localhost:8080/api/CouponSystem/
+
 spring.jackson.serialization.fail_on_empty_beans=false
 #swagger.host.url=http://localhost:8080
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 string.len = 60
